[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "chszlablib"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
networkx = ["networkx>=2.6"]
scipy = ["scipy>=1.7"]
dev = ["pytest>=7.0"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["chszlablib"]
