[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "chszlablib"
version = "0.5.27"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
networkx = ["networkx>=2.6"]
scipy = ["scipy>=1.7"]
dev = ["pytest>=7.0"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DCMAKE_POLICY_VERSION_MINIMUM=3.5"]
wheel.packages = ["chszlablib"]
